--- a/v1/schema/definitions/Season.json
+++ b/v1/schema/definitions/Season.json
@@ -10,7 +10,7 @@
                 "description": "Title of season"
             },
             "_links": {
-                "$ref": "definitions/_links.json#_links"
+                "$ref": "_links.json#_links"
             }
         }
     },
@@ -18,12 +18,12 @@
         "type": "object",
         "allOf": [
             {
-                "$ref": "definitions/Season.json#brief"
+                "$ref": "Season.json#brief"
             },
             {
                 "properties": {
                     "tournament": {
-                        "$ref": "definitions/Tournament.json#brief"
+                        "$ref": "Tournament.json#brief"
                     }
                 }
             }
